[tool.poetry]
name = "statistics"
version = "0.1.0"
description = "Diverse Statistic Tools lernen"
authors = ["stephan <sreindl@innitiative.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
scipy = "^1.14.1"
pandas = "^2.2.3"
polars = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
